# escra

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.json
app/: __init__.py  bot.py  config.py  db.py  main.py  olx.py  rates.py  scraper.py
app/webapp/: api.py
app/webapp/templates/: index.html
deploy/: Caddyfile  deploy.sh  escra-healthcheck.service  escra-healthcheck.timer  escra.service
scripts/: healthcheck.py
