[project]
name = "escra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "python-telegram-bot>=21",
    "uvicorn[standard]>=0.51.0",
]
